# tripadvisor

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  sample.py  search.html  searchindex.js  setup.py  sitemap.xml  tripadvisor.py  wercker.yml
.github/workflows/: static.yaml
_modules/: index.html  tripadvisor.html
_sources/: index.rst.txt
_sources/modules/: tripadvisor.rst.txt
_static/: opensearch.xml
docs/: Makefile
docs/source/: conf.py  index.rst
modules/: tripadvisor.html
tests/: __init__.py  conftest.py  test_debug.py  test_graph.py  test_loader.py  test_suite.py  test_tripadvisor.py  tripadvisor_test.py
tripadvisor/: __init__.py  __main__.py  cli.py  debug.py  loader.py  tripadvisor.py
